[tool.poetry]
name = "pydock3"
version = "1.0.0"
description = ""
authors = ["Ian Scott Knight <isk@alumni.stanford.edu>"]
license = "Proprietary"
include = []


[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
numpy = "^1.21.5"
scipy = "^1.7.3"
fire = "^0.4.0"
python-dotenv = "^0.20.0"
PyYAML = "^6.0"
yamale = "^4.0.4"
oyaml = "^1.0"
networkx = "^2.8"
matplotlib = "^3.5.1"
rdkit-pypi = "^2022.3.2"
pandas = "^1.4.2"
varname = "^0.8.3"
pytoc = "^0.0.3"
scikit-learn = "^1.1.1"
seaborn = "^0.11.2"
dirhash = "^0.2.1"
joypy = "^0.2.6"
typing-extensions = "^4.5.0"
xmltodict = "^0.13.0"
plotly = "^5.14.1"
pillow = "^9.5.0"
tornado = "^6.3.2"
timeout-decorator = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.18.1"
camel-snake-pep8 = "^0.2.3"
2to3 = "^1.0"
jupyter = "^1.0.0"
black = "^21.12b0"
vulture = "^2.3"
pygount = "^1.4.0"
seaborn = "^0.11.2"
openpyxl = "^3.0.10"
notebook = "^6.4.12"
setuptools = "^65.5.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pydock3 = "pydock3.scripts:main"
